# WRP_LM

./: .dockerignore  .env.example  .gitignore  QRSPI_Questions_Artifact.md  README.md  alembic.ini  package.json  pnpm-lock.yaml  pyproject.toml
.devcontainer/: devcontainer.json  hydrate-mcp-auth.sh  install-tailscale.sh  start-tailscale.sh
apps/vscode/: package.json  tsconfig.json
apps/vscode/src/: extension.ts
apps/web/: package.json  playwright.config.ts  tsconfig.json
apps/web/e2e/: core-workflows.spec.ts
docker/: api.Dockerfile  web.Dockerfile  worker.Dockerfile
infra/: compose.dev.yaml
infra/postgres/: init.sql
migrations/: env.py
migrations/versions/: 0001_extensions_base.py  0002_identity_access.py  0003_projects_pipeline.py  0004_artifacts_collaboration.py  0005_documents_retrieval.py  0006_embeddings.py  0007_notion_sync.py  0008_plugins_audit.py  0009_rls_indexes.py  0010_notifications.py
src/cortex/: __init__.py
src/cortex/access/: db_models.py  repository.py
src/cortex/api/: app.py  deps.py  error_handlers.py
src/cortex/artifacts/: api_models.py  export.py  index_projection.py
src/cortex/audit/: events.py  publisher.py  repository.py
src/saturn/: __init__.py
tests/: conftest.py
tests/api/: test_app_bootstrap.py  test_phase2_core.py  test_phase3_artifacts.py  test_phase4_documents.py  test_phase5_retrieval.py  test_phase6_notion.py  test_phase7_plugins.py
tests/fixtures/: auth.py  db.py  documents.py  phase2.py  redis.py
tests/migrations/: test_extensions_base.py  test_identity_projects_migrations.py
(+244 files in other folders)
