[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "saturn"
version = "0.1.0"
description = "Saturn control plane, workers, and integration surfaces."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.16",
  "boto3>=1.39",
  "fastapi>=0.116",
  "httpx>=0.28",
  "pydantic>=2.11",
  "pydantic-settings>=2.10",
  "redis>=6.0",
  "sqlalchemy>=2.0",
  "uvicorn>=0.35",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/saturn"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
